--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-jade": "^0.10.0"
   },
   "dependencies": {
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "delaunay-fast": "1.0.1"
   }
 }
