--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "gulp-jade": "^0.10.0"
   },
   "dependencies": {
-    "jquery": "~2.1.3",
-    "delaunay-fast": "1.0.1"
+    "jquery": "~2.1.3"
   }
 }
